--- a/index.html
+++ b/index.html
@@ -1,24 +1,37 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Accessible To-Do List</title>
-    <link rel="stylesheet" href="styles.css">
-</head>
-<body>
+    <link rel="stylesheet" href="styles.css" />
+    <audio id="task-added-sound" src="sounds/task-added.mp3"></audio>
+    <audio id="task-removed-sound" src="sounds/task-removed.mp3"></audio>
+  </head>
+  <body>
     <div class="container">
-        <h1>Accessible To-Do List</h1>
-        <form id="task-form">
-            <label for="task-input">New Task:</label>
-            <input type="text" id="task-input" aria-required="true" placeholder="Enter task here">
-            <button type="submit">Add Task</button>
-            <button type="button" id="voice-button" aria-label="Add task using voice">🎙️</button>
-        </form>
-        <ul id="task-list" role="list">
-            <!-- Tasks will be dynamically added here -->
-        </ul>
+      <h1>Accessible To-Do List</h1>
+      <form id="task-form">
+        <label for="task-input">New Task:</label>
+        <input
+          type="text"
+          id="task-input"
+          aria-required="true"
+          placeholder="Enter task here"
+        />
+        <button type="submit">Add Task</button>
+        <button
+          type="button"
+          id="voice-button"
+          aria-label="Add task using voice"
+        >
+          🎙️
+        </button>
+      </form>
+      <ul id="task-list" role="list">
+        <!-- Tasks will be dynamically added here -->
+      </ul>
     </div>
     <script src="script.js"></script>
-</body>
+  </body>
 </html>
