--- a/index.html
+++ b/index.html
@@ -3,23 +3,23 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Accessible To-Do List</title>
+    <title>Access Buddyt</title>
     <link rel="stylesheet" href="styles.css" />
     <audio id="task-added-sound" src="sounds/task-added.mp3"></audio>
     <audio id="task-removed-sound" src="sounds/task-removed.mp3"></audio>
   </head>
   <body>
     <div class="container">
-      <h1>Accessible To-Do List</h1>
+      <h1><span style="color: aliceblue;">ACCESS</span> <span style="color: rgb(49, 135, 211);">BUDDY</span> </h1>
       <form id="task-form">
-        <label for="task-input">New Task:</label>
+        <label for="task-input"><span style="color: aliceblue;">NEW TASK</span></label>
         <input
           type="text"
           id="task-input"
           aria-required="true"
           placeholder="Enter task here"
         />
-        <button type="submit">Add Task</button>
+        <button type="submit"><span style="color: aliceblue;">ADD TASK</span></button>
         <button
           type="button"
           id="voice-button"
