--- a/home.html
+++ b/home.html
@@ -14,9 +14,14 @@
         <div class="content">
             <h3>WELCOME</h3>
             <h3>TO</h3>
-            <h3>ACCESS BUDDY</h3>
-            <p class="quote">"Accessibility isn’t about making things easier;</p>
-            <p class="quote"> it’s about making them possible."</p>
+            <h3>ACCESS  <span style="color: rgb(160, 49, 211)">BUDDY</span></h3>
+            <p class="quote" id="quote-text">"Accessibility isn’t about making things easier; it’s about making them possible."</p>
+            <button id="play-quote" aria-label="Play quote"><i class="fas fa-volume-up"></i></button>
+            <button id="info-button" aria-label="Learn more about this website"><i class="fas fa-info-circle"></i> Learn More</button>
+            <div class="get-started">
+                <input type="text" id="name-input" placeholder="Enter your name">
+                <button id="get-started" aria-label="Get started"><i class="fas fa-arrow-right"></i> Get Started</button>
+            </div>
         </div>
     </div>
     <script src="script.js"></script>
