--- a/add.html
+++ b/add.html
@@ -106,6 +106,7 @@
                     <div class="form-btn">
                         <button type="submit" class="add-btn"><span style="color: aliceblue">ADD TASK</span></button>
                         <button type="button" id="voice-button" aria-label="Add task using voice"><i class="fa-solid fa-microphone"></i></button>
+                        <button id="read-all-tasks-btn" aria-label="Read all tasks"><span style="color: aliceblue">READ ALL TASKS</span></button>
                     </div>
                 </div>
             </form>
