--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
                     <div class="dropdown-header">
                         <div class="header-content">
                             <i class="fa-solid fa-book header-logo"></i> 
-                            <span class="header-text">DOCUMENTS</span>
+                            <span class="header-text">STUDY</span>
                         </div>
                         <i class="fa-solid fa-caret-down"></i>
                     </div>
