--- a/index.html
+++ b/index.html
@@ -87,7 +87,9 @@
                     </div>
                     <div class="dropdown-content">
                         <ul>
-                            <li>APP GUIDE</li>
+                            <li id="read-document-task-option">
+                                <a href="app_guide.html">APP GUIDE <i class="fa-solid fa-plus"></i></a>
+                            </li>
                             <li>CHANGE PROFILE PICTURE</li>
                             <li>LOGOUT</li>
                         </ul>
