--- a/read_doc.html
+++ b/read_doc.html
@@ -84,7 +84,7 @@
                     </div>
                     <div class="dropdown-content">
                         <ul>
-                            <li>APP GUIDE</li>
+                            <li><a href="app_guide.html">APP GUIDE</a></li>
                             <li>CHANGE PROFILE PICTURE</li>
                             <li>LOGOUT</li>
                         </ul>
