--- a/reminder.html
+++ b/reminder.html
@@ -47,14 +47,16 @@
                     <div class="dropdown-header">
                         <div class="header-content">
                             <i class="fa-solid fa-book header-logo"></i> 
-                            <span class="header-text">READ DOCUMENT</span>
+                            <span class="header-text">STUDY</span>
                         </div>
                         <i class="fa-solid fa-caret-down"></i>
                     </div>
                     <div class="dropdown-content">
                         <ul>
-                            <li>Task 1</li>
-                            <li>Task 2</li>
+                            <li id="read-document-task-option">
+                                <a href="read_doc.html">READ A DOCUMENT <i class="fa-solid fa-plus"></i></a>
+                            </li>
+                           
                         </ul>
                     </div>
                 </div>
@@ -83,7 +85,7 @@
                     </div>
                     <div class="dropdown-content">
                         <ul>
-                            <li>APP GUIDE</li>
+                            <li><a href="app_guide.html">APP GUIDE</a></li>
                             <li>CHANGE PROFILE PICTURE</li>
                             <li>LOGOUT</li>
                         </ul>
