all feature done

--- a/app_guide.html
+++ b/app_guide.html
@@ -170,9 +170,11 @@
                 </section>
             </div>
 
-            <button id="read-text-btn">Read App Guide</button>
+            <button id="read-text-btn">READ APP GUIDE <i class="fas fa-volume-up"></i></button>
         </div>
     </div>
+    
+    <script src="app_guide.js"></script>
     <script src="script.js"></script>
 </body>
 </html>
