--- a/add.html
+++ b/add.html
@@ -69,8 +69,9 @@
                     </div>
                     <div class="dropdown-content">
                         <ul>
-                            <li>Task 1</li>
-                            <li>Task 2</li>
+                            <li id="add-remove-task-option">
+                                <a href="emergency.html">ADD / REMOVE CONTACT <i class="fa-solid fa-plus"></i></a>
+                            </li>
                         </ul>
                     </div>
                 </div>
@@ -105,9 +106,11 @@
                         <input type="text" id="task-input" aria-required="true" placeholder="Enter task here">
                     </div>
                     <div class="form-btn">
-                        <button type="submit" class="add-btn"><span style="color: aliceblue">ADD TASK</span></button>
                         <button type="button" id="voice-button" aria-label="Add task using voice"><i class="fa-solid fa-microphone"></i></button>
+                        <button type="submit" class="add-btn"><span style="color: aliceblue">ADD TASK</span></button>
+                        
                         <button id="read-all-tasks-btn" aria-label="Read all tasks"><span style="color: aliceblue">READ ALL TASKS</span></button>
+                        
                     </div>
                 </div>
             </form>
