--- a/home.html
+++ b/home.html
@@ -14,13 +14,13 @@
         <div class="content">
             <h3>WELCOME</h3>
             <h3>TO</h3>
-            <h3>ACCESS  <span style="color: rgb(160, 49, 211)">BUDDY</span></h3>
+            <h3>ACCESS  <span style="color:rgb(49, 135, 211)">BUDDY</span></h3>
             <p class="quote" id="quote-text">"Accessibility isn’t about making things easier; it’s about making them possible."</p>
             <button id="play-quote" aria-label="Play quote"><i class="fas fa-volume-up"></i></button>
-            <button id="info-button" aria-label="Learn more about this website"><i class="fas fa-info-circle"></i> Learn More</button>
+            <button id="info-button" aria-label="Learn more about this website"><i class="fas fa-info-circle"></i> LEARN MORE</button>
             <div class="get-started">
                 <input type="text" id="name-input" placeholder="Enter your name">
-                <button id="get-started" aria-label="Get started"><i class="fas fa-arrow-right"></i> Get Started</button>
+                <button id="get-started" aria-label="Get started"><i class="fas fa-arrow-right"></i> GET STARTED</button>
             </div>
         </div>
     </div>
