--- a/read_doc.html
+++ b/read_doc.html
@@ -69,9 +69,9 @@
                     </div>
                     <div class="dropdown-content">
                         <ul>
-                            <li>Task 1</li>
-                            <li>Task 2</li>
-                        </ul>
+                            <li id="add-remove-task-option">
+                                <a href="emergency.html">ADD / REMOVE CONTACT <i class="fa-solid fa-plus"></i></a>
+                            </li>
                     </div>
                 </div>
                 <div class="dropdown">
